<resources>
    <string name="app_name">Gamer Regnum</string>
    <string name="title_activity_main_page">MainActivity</string>
    <string name="Imagen">Img</string>
    <string name="title_activity_page_primary">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_referrals">Referrals</string>
    <string name="title_rewards">Rewards</string>
    <string name="title_others">Others</string>
    <string name="Text_Email">Email</string>
    <string name="Text_Signup">Sign up</string>
    <string name="Text_Pass">Password</string>
    <string name="Text_number">00:00:00</string>
    <string name="Puntos">Points:</string>
    <string name="Referidos">Referrals:</string>
    <string name="Text_Timer">Active Timers</string>
    <string name="Text_Gamer">Add New</string>
    <string name="Text_Atributo">Atributo</string>
    <string name="Text_Forgot">Forgot password</string>
    <string name="Text_ResultPoint">0</string>
    <string name="Text_ResultReferrals">0</string>
    <string name="Text_AddScan">Add Apps</string>
    <string name="btnSig">Next</string>
    <string name="btnSig2">Next</string>
    <string name="btnSig3">Next</string>
    <string name="btnSig4">Next</string>
    <string name="btnSig5">Next</string>
    <string name="Selec_App">Select the app</string>
    <string name="text_ReferralName">Name of Referral</string>
    <string name="text_AddFavoriteApps">Add New Apps</string>
    <string name="text_ScanforMyapps">Scan for My Apps</string>
    <string name="text_ExternalApps">External Apps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Text_Finaly">Finalize</string>
    <string name="Text_Points">Points</string>
    <string name="Text_SeeMore">See more</string>
    <string name="Text_btnShare">Share</string>
    <string name="Text_btnCancel">Cancel</string>
    <string name="Tex_Exp1">Share your link and receive more points</string>
    <string name="Text_Plus">+</string>
    <string name="Title">Title</string>
    <string name="Start">Start</string>

</resources>