<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_tasks"
        android:title="@string/title_tasks"
        android:icon="@drawable/ic_tasks"/>

    <item
        android:id="@+id/navigation_referrals"
        android:icon="@drawable/ic_referrals"
        android:title="@string/title_referrals" />

    <item
        android:id="@+id/navigation_rewards"
        android:icon="@drawable/ic_rewards"
        android:title="@string/title_rewards" />

    <item
        android:id="@+id/navigation_others"
        android:icon="@drawable/ic_others"
        android:title="@string/title_others" />

</menu>