<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191970"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="332dp"
                android:layout_height="154dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/logocomp"
                android:contentDescription="@string/Imagen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/TextEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="56dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:ems="10"
                android:hint="@string/Text_Email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/TextPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:ems="10"
                android:hint="@string/Text_Pass"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TextEmail" />


            <TextView
                android:id="@+id/text_forgot"
                android:layout_width="123dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:gravity="center"
                android:onClick="Forgot"
                android:text="@string/Text_Forgot"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TextPassword" />

            <Button
                android:id="@+id/BTNLogin"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/border_button2"
                android:onClick="BTNLogin"
                android:text="Login"
                android:textColor="@android:color/white"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textColorLink="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_forgot" />

            <Button
                android:id="@+id/BTNSignup"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/border_button"
                android:onClick="BTNSignup"
                android:text="@string/Text_Signup"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/BTNLogin"
                app:layout_constraintVertical_bias="0.0" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>